--- a/ProductManager/src/main/resources/templates/home.html
+++ b/ProductManager/src/main/resources/templates/home.html
@@ -18,9 +18,8 @@
 
 <body>
 
-
 <!-- NAVIGATION BAR ---------------------------------------------------------------------------------------->
-	
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">IMango</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,10 +50,20 @@
 
 
 
-<!-- ADD A PRODUCT FORM--------------------------------------------------------------------------------------->
 
-
+<div class="hero">
+  <div class="hero-text">
+    <h1>Product Inventory</h1>
+    <p>And I'm a Photographer</p>
+    <button>Hire me</button>
+  </div>
 </div>
+</div>
+
+
+
+
+
 
 
 
